--- a/src/output.css
+++ b/src/output.css
@@ -2326,6 +2326,18 @@ video {
   vertical-align: super;
 }
 
+.font-apercu {
+  font-family: Apercu, sans-serif;
+}
+
+.font-gtalpina {
+  font-family: GT Alpina Typewriter, sans-serif;
+}
+
+.font-itc {
+  font-family: ITC Garamond Book Condensed, sans-serif;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -2356,10 +2368,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-medium {
-  font-weight: 500;
 }
 
 .uppercase {
@@ -2500,6 +2508,14 @@ video {
 
 .decoration-wavy {
   text-decoration-style: wavy;
+}
+
+.decoration-2 {
+  text-decoration-thickness: 2px;
+}
+
+.underline-offset-8 {
+  text-underline-offset: 8px;
 }
 
 .antialiased {
@@ -2850,6 +2866,49 @@ video {
   forced-color-adjust: none;
 }
 
+@font-face {
+  font-family: "ITC Garamond Book Condensed";
+
+  src: url("https://db.onlinewebfonts.com/t/1c518a048d8c706ff853c73a29a976f6.woff2")format("woff2"),
+   url("https://db.onlinewebfonts.com/t/1c518a048d8c706ff853c73a29a976f6.woff")format("woff");
+
+  font-weight: normal;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GT Alpina Typewriter";
+
+  src: url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.eot");
+
+  src: url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.eot?#iefix")format("embedded-opentype"),
+   url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.woff2")format("woff2"),
+   url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.woff")format("woff"),
+   url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.ttf")format("truetype"),
+   url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.svg#GT Alpina Typewriter")format("svg");
+
+  font-weight: normal;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Apercu";
+
+  src: url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.eot");
+
+  src: url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.eot?#iefix")format("embedded-opentype"),
+   url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.woff2")format("woff2"),
+   url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.woff")format("woff"),
+   url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.ttf")format("truetype"),
+   url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.svg#Apercu")format("svg");
+
+  font-weight: bold;
+
+  font-style: normal;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -2893,6 +2952,16 @@ video {
 .checked\:bg-\[\#9eef80\]:checked {
   --tw-bg-opacity: 1;
   background-color: rgb(158 239 128 / var(--tw-bg-opacity));
+}
+
+.hover\:translate-x-1:hover {
+  --tw-translate-x: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:translate-y-1:hover {
+  --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-\[\#f6e6d9\]:hover {
@@ -3066,4 +3135,3 @@ video {
     }
   }
 }
-
