--- a/style.css
+++ b/style.css
@@ -2,3 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+   font-family: "ITC Garamond Book Condensed";
+   
+   src: url("https://db.onlinewebfonts.com/t/1c518a048d8c706ff853c73a29a976f6.woff2")format("woff2"),
+   url("https://db.onlinewebfonts.com/t/1c518a048d8c706ff853c73a29a976f6.woff")format("woff");
+   font-weight: normal;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: "GT Alpina Typewriter";
+   src: url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.eot");
+   src: url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.eot?#iefix")format("embedded-opentype"),
+   url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.woff2")format("woff2"),
+   url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.woff")format("woff"),
+   url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.ttf")format("truetype"),
+   url("https://db.onlinewebfonts.com/t/880dddf972fcd402b08f472d2b94f585.svg#GT Alpina Typewriter")format("svg");
+   font-weight: normal;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: "Apercu";
+   src: url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.eot");
+   src: url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.eot?#iefix")format("embedded-opentype"),
+   url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.woff2")format("woff2"),
+   url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.woff")format("woff"),
+   url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.ttf")format("truetype"),
+   url("https://db.onlinewebfonts.com/t/cc63ce6e304da54106961b31a1d744a9.svg#Apercu")format("svg");
+   font-weight: bold;
+   font-style: normal;
+}
